--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
             <h2>Performance Metrics</h2>
             <div class="performance-grid">
                 <div class="performance-card">
-                    <div class="performance-value" id="totalUsers">1.2M+</div>
+                    <div class="performance-value" id="totalUsers">70k+</div>
                     <div class="performance-label">Active Users</div>
                 </div>
                 <div class="performance-card">
-                    <div class="performance-value" id="dailyTrades">850K+</div>
+                    <div class="performance-value" id="dailyTrades">850+</div>
                     <div class="performance-label">Daily Trades</div>
                 </div>
                 <div class="performance-card">
-                    <div class="performance-value" id="assetsUnder">$4.8B</div>
+                    <div class="performance-value" id="assetsUnder">$400+</div>
                     <div class="performance-label">Assets Under Management</div>
                 </div>
                 <div class="performance-card">
@@ -269,6 +269,10 @@
             </div>
         </div>
     </section>
+    <div>
+        <h1>deepsh</h1>
+    </div>
+
 
     <!-- Live News Section -->
     <section class="news-section" id="news">
@@ -344,6 +348,7 @@
             </div>
         </div>
     </section>
+    
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
@@ -424,7 +429,7 @@
             </div>
         </div>
     </section>
-
+  
     <!-- Footer -->
     <footer>
         <div class="container">
