--- a/index.html
+++ b/index.html
@@ -225,6 +225,44 @@
             </div>
         </div>
     </section>
+    <!-- meet our team-->
+   <section class="leadership-section">
+  <div class="leadership-container">
+    <h2 class="leadership-title">Meet Our Head</h2>
+    <p class="leadership-subtitle">
+      Being a leader at the helm of a technology company is an incredible opportunity 
+      to shape the future. Embrace your role with confidence and determination 
+      to guide your team towards success.
+    </p>
+
+    <div class="leadership-grid">
+      <div class="leader-item">
+        <img src="assests/WhatsApp Image 2025-10-25 at 14.10.14_7cd11e12.jpg" alt="Deepesh Sharma" class="leader-photo">
+        <div class="leader-details">
+          <h3 class="leader-name">Deepesh Sharma</h3>
+          <p class="leader-role">General Manager of Foci Tech, Store, Finance</p>
+        </div>
+      </div>
+
+      <div class="leader-item">
+        <img src="assests/WhatsApp Image 2025-10-25 at 14.10.13_9c59be4e.jpg" alt="Kanshika Sandhu" class="leader-photo">
+        <div class="leader-details">
+          <h3 class="leader-name">Kanshika Sandhu</h3>
+          <p class="leader-role">Co-Founder & Executive of Foci Tech, Store, Finance</p>
+        </div>
+      </div>
+
+      <div class="leader-item">
+        <img src="assests/WhatsApp Image 2025-10-25 at 14.10.13_8edc7643.jpg" height="" alt="Nikhil Singh" class="leader-photo">
+        <div class="leader-details">
+          <h3 class="leader-name">Nikhil Singh</h3>
+          <p class="leader-role">Founder & Former Managing Director of Foci Tech, Store, Finance</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Trading Tools Section -->
     <section class="trading-tools" id="trading-tools">
