--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <h2>Performance Metrics</h2>
             <div class="performance-grid">
                 <div class="performance-card">
-                    <div class="performance-value" id="totalUsers">70k+</div>
+                    <div class="performance-value" id="totalUsers">20k</div>
                     <div class="performance-label">Active Users</div>
                 </div>
                 <div class="performance-card">
